--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -155,3 +155,9 @@
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: 'Fonarto';
+  src: url('/fonts/fonarto/Fonarto.ttf') format('truetype'); 
+  font-weight: normal;
+  font-style: normal;
+}
