--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -157,7 +157,7 @@
 }
 @font-face {
   font-family: 'Fonarto';
-  src: url('/fonts/fonarto/Fonarto.ttf') format('truetype'); 
+  src: url('/font/fonarto/Fonarto.ttf') format('truetype'); 
   font-weight: normal;
   font-style: normal;
 }
