--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.cdnfonts.com/css/fonarto-xt');
 @import "tailwindcss";
 @import "tw-animate-css";
 
+.font-fonarto {
+  font-family: 'Fonarto XT', sans-serif;
+}
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
@@ -161,3 +165,5 @@
   font-weight: normal;
   font-style: normal;
 }
+
+
