--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,6 +126,9 @@
     background-color: var(--color-background);
     color: var(--color-foreground);
   }
+  body {
+  cursor: url("/images/custom-cursor.jpg"), auto;
+}
   
 }
 * {
